- Broke IModel out into a few different interfaces so I could have IAttribute deviate from IModel.  This is because there's no point in publicizing an 'id' for individual character attributes that make up character attribute rows. - Fixed all tests.  They should now all be passing. - Refactored BsonClassMapping logic (needs additional refactoring to DRY)

--- a/FrannHammer.Domain/FrannHammer.Domain.csproj
+++ b/FrannHammer.Domain/FrannHammer.Domain.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="CharacterAttribute.cs" />
-    <Compile Include="DefaultCharacterAttributeRow.cs" />
+    <Compile Include="CharacterAttributeRow.cs" />
     <Compile Include="FriendlyNameAttribute.cs" />
     <Compile Include="FriendlyNameCommonConstants.cs" />
     <Compile Include="MongoModel.cs" />
