--- a/FrannHammer.DataAccess.MongoDb.Tests/app.config
+++ b/FrannHammer.DataAccess.MongoDb.Tests/app.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings file="..\..\..\appsettings.config">
+    <add key="databaseName" value="playgroundfranndotexe"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="ds119151.mlab.com:19151/"/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
