- Refactored BsonMapper since both public methods needs to register property that have the friendly name attribute - Added support for getting an object back by Name.  Refactored existing IRepository.Get to IRepository.GetById - Continuing to work on optimizing tests.

--- a/FrannHammer.DataAccess.MongoDb.Tests/FrannHammer.DataAccess.MongoDb.Tests.csproj
+++ b/FrannHammer.DataAccess.MongoDb.Tests/FrannHammer.DataAccess.MongoDb.Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="BaseRepositoryTests.cs" />
     <Compile Include="CharacterAttributeRowRepositoryTests.cs" />
     <Compile Include="CharacterRepositoryTests.cs" />
+    <Compile Include="GeneralRepositoryTests.cs" />
     <Compile Include="MovementRepositoryTests.cs" />
     <Compile Include="MoveRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
