- Fixed a member mapping issue with model objects.  Namely CharacterAttribute. - Refactored ScrapingModule to use the AttributeScrapers.All.. method - Added CharacterAttribute type to Seeder.Startup so seeded character attributes have their type properly set by mongodb. - Added support for getting an object by its name in all Controllers - Refactored MongoDbBsonMapper and removed methods that were covered better with BsonMapper (one of these will be getting deprecated soon) - Added tests for new controller routes, bsonmapping - Dumped idea to genericize repository tests.  It's too painful for too little gain right now -

--- a/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="AutofacContractResolver.cs" />
     <Compile Include="Controllers\ApiControllerBaseRoutingConstants.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\CharacterAttributeController.cs" />
