- Continuing to refactor Api services classes to avoid duplication - Also continuing to refactor and optimize tests.

--- a/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
+++ b/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseApiService.cs" />
     <Compile Include="DefaultCharacterAttributeService.cs" />
     <Compile Include="DefaultCharacterService.cs" />
     <Compile Include="DefaultMovementService.cs" />
