- Removed solution wide unused namespace imports - Added initial support for parsing raw move properties into stronger type objects (started with BaseDamageParser) - Created attribute that sets type of parser to be used on a move property when parsing it into a strongly typed version - Added support to MoveController for pulling back specific properties of moves - Added tests to encompass new functionality - Added MoveParseClassMap which allows consumer to register a specific implementation of IMove.  This allows me to get concrete typing information at runtime without having to embed a concrete type into a parser.  BaseDamageParser utilitizes this and so will other parsers.  This also lets me avoid passing around the DI container.

--- a/FrannHammer.Domain/FrannHammer.Domain.csproj
+++ b/FrannHammer.Domain/FrannHammer.Domain.csproj
@@ -52,7 +52,12 @@
     <Compile Include="MongoModel.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Movement.cs" />
+    <Compile Include="MoveParseClassMap.cs" />
+    <Compile Include="PropertyParsers\MoveDataNameConstants.cs" />
+    <Compile Include="PropertyParsers\PropertyParser.cs" />
+    <Compile Include="PropertyParsers\PropertyParserAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyParsers\BaseDamageParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FrannHammer.Domain.Contracts\FrannHammer.Domain.Contracts.csproj">
