--- a/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
+++ b/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
@@ -50,7 +50,10 @@
   <ItemGroup>
     <Compile Include="BsonMapperTests.cs" />
     <Compile Include="FriendlyNameTests.cs" />
+    <Compile Include="MoveParseClassMapTests.cs" />
+    <Compile Include="MovePropertyParserAttributeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyParserTests\BaseDamageParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
