--- a/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
+++ b/FrannHammer.Domain.Tests/FrannHammer.Domain.Tests.csproj
@@ -53,7 +53,14 @@
     <Compile Include="MoveParseClassMapTests.cs" />
     <Compile Include="MovePropertyParserAttributeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyParserTests\BaseDamageParserTests.cs" />
+    <Compile Include="PropertyParserAttributeTests.cs" />
+    <Compile Include="PropertyParserTests\AutoCancelParserTests.cs" />
+    <Compile Include="PropertyParserTests\BaseKnockbackParserTests.cs" />
+    <Compile Include="PropertyParserTests\FirstActionableFrameParserTests.cs" />
+    <Compile Include="PropertyParserTests\GeneralParserTests.cs" />
+    <Compile Include="PropertyParserTests\HitboxParserTests.cs" />
+    <Compile Include="PropertyParserTests\LandingLagParserTests.cs" />
+    <Compile Include="PropertyParserTests\SetKnockbackParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
