- Refactored DefaultMoveService to add support for getting property data by move Id while staying DRY - Moved controller tests that should have been in api services tests to api services tests - Refactored Knockback parser to eliminate unnecessary branches of logic - Added support to MoveController for getting property data of a specific move by id

--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -68,7 +68,7 @@
     <Compile Include="CharacterServiceTests.cs" />
     <Compile Include="GeneralServiceTests.cs" />
     <Compile Include="MovementServiceTests.cs" />
-    <Compile Include="MoveServiceTests.cs" />
+    <Compile Include="DefaultMoveServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
