- Added api call to get all throw data for a character - IMoveService now has GetAllThrowsWhereCharacterNameIs - Added acceptance test for getting throws of a character - CharacterController now requires both a characterservice instance and a moveservice instance. - Modified BaseSteps.InjectRouteParameterIntoRequestUrl so that is does not parse the last '/' portion of a route every time.  It now accepts a new parameter that specifies which portion of a url to inject a value into. - Create ThrowMoveScraper which looks at character data tables on kh site and scrapes throw data.

--- a/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
+++ b/FrannHammer.Api.Services/FrannHammer.Api.Services.csproj
@@ -68,6 +68,10 @@
       <Project>{4DB55C69-EAE5-4970-B8B2-A7A84900041A}</Project>
       <Name>FrannHammer.Utility</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping\FrannHammer.WebScraping.csproj">
+      <Project>{B7686798-61B2-4208-86EF-0076BF1301BE}</Project>
+      <Name>FrannHammer.WebScraping</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
