--- a/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
+++ b/FrannHammer.WebScraping/FrannHammer.WebScraping.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Movements\MovementProvider.cs" />
     <Compile Include="Movements\DefaultMovementScraper.cs" />
     <Compile Include="Moves\GroundMoveScraper.cs" />
+    <Compile Include="Moves\ThrowMoveScraper.cs" />
     <Compile Include="PageDownloading\DefaultPageDownloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScrapingConstants.cs" />
