- DefaultMoveService.GetAllThrowsWhereCharacterNameIs now throws for null or empty name parameter (owner name) - Added tests for new getallthrows... method at the service level - Refactored mock setup logic in DefaultMoveService tests - Removed call to set move.MoveType to lower case in assertion for default move scraping tests.  This should already be lower case and should fail if it isn't.

--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -96,6 +96,10 @@
       <Project>{4DB6C856-581A-4B69-BB6A-4AEBF3929C5E}</Project>
       <Name>FrannHammer.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.WebScraping\FrannHammer.WebScraping.csproj">
+      <Project>{B7686798-61B2-4208-86EF-0076BF1301BE}</Project>
+      <Name>FrannHammer.WebScraping</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
