- Added support for parameter query filtering (e.g., /moves?movetype=ground) - Refactoring around api services - Added in Swagger support - Add a method in repository that passed in a dictionary with key/value pairs that are inserted into a query where the matching results must have properties equal to all passed in values. - Created CharacterDetailsDto to support aggregate character data in /details character call - Created IMoveFilterResourceQuery which transforms URL route values and parameter query data to a backend friendly object.

--- a/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
+++ b/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ICharacterAttributeRowService.cs" />
     <Compile Include="ICharacterService.cs" />
     <Compile Include="ICrudService.cs" />
+    <Compile Include="IDtoProvider.cs" />
     <Compile Include="IMovementService.cs" />
     <Compile Include="IMoveService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
