--- a/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DefaultCharacterDataScrapingServiceIntegrationTests.cs" />
     <Compile Include="DefaultMovementScrapingServiceIntegrationTests.cs" />
     <Compile Include="DefaultMoveScrapingServiceIntegrationTests.cs" />
+    <Compile Include="DefaultWebServicesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
