--- a/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
+++ b/FrannHammer.Api.Services.Tests/FrannHammer.Api.Services.Tests.csproj
@@ -64,12 +64,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiServiceTestSetupUtility.cs" />
     <Compile Include="CharacterAttributeRowServiceTests.cs" />
     <Compile Include="CharacterServiceTests.cs" />
     <Compile Include="GeneralServiceTests.cs" />
-    <Compile Include="MovementServiceTests.cs" />
+    <Compile Include="DefaultMovementServiceTests.cs" />
     <Compile Include="DefaultMoveServiceTests.cs" />
+    <Compile Include="OwnerBasedApiServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryMappingServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
