--- a/FrannHammer.Domain/FrannHammer.Domain.csproj
+++ b/FrannHammer.Domain/FrannHammer.Domain.csproj
@@ -47,10 +47,13 @@
     <Compile Include="Character.cs" />
     <Compile Include="CharacterAttribute.cs" />
     <Compile Include="CharacterAttributeRow.cs" />
+    <Compile Include="CharacterDetailsDto.cs" />
     <Compile Include="FriendlyNameAttribute.cs" />
     <Compile Include="FriendlyNameCommonConstants.cs" />
     <Compile Include="MongoModel.cs" />
     <Compile Include="Move.cs" />
+    <Compile Include="MoveFilterResourceQuery.cs" />
+    <Compile Include="FriendlyNameMoveCommonConstants.cs" />
     <Compile Include="Movement.cs" />
     <Compile Include="MoveParseClassMap.cs" />
     <Compile Include="PropertyParsers\AutocancelParser.cs" />
