--- a/FrannHammer.WebApi.Specs/app.config
+++ b/FrannHammer.WebApi.Specs/app.config
@@ -4,10 +4,10 @@
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
   <appSettings file="..\..\..\appsettings.config">
-    <add key="databaseName" value="integrationtestfranndotexe"/>
+    <add key="databaseName" value="integrationtestfranndotexe" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/"/>
+    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/" />
   </connectionStrings>
 
 
@@ -72,6 +72,6 @@
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider -->
-    <unitTestProvider name="NUnit" />
+    <unitTestProvider name="Nunit" />
   </specFlow>
 </configuration>
