--- a/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ICharacter.cs" />
     <Compile Include="ICharacterDetailsDto.cs" />
     <Compile Include="IHaveAnOwner.cs" />
+    <Compile Include="IHaveAnOwnerId.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IMove.cs" />
     <Compile Include="IMoveFilterResourceQuery.cs" />
