- Able to return detailed move data that is parsed from raw Move data on the fly (as requested).  No cache support for this yet.

--- a/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
+++ b/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IDtoProvider.cs" />
     <Compile Include="IMovementService.cs" />
     <Compile Include="IMoveService.cs" />
+    <Compile Include="ParsedMove.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
