- Actually added support for searching moves via move property criteria on character controller - DefaultMovementService ctor now takes an IQueryMappingService instance - Added a base interface 'IFilterResourceQuery' and 'IMovementFilterResourceQuery' that contains the available parameters consumers can use when searching data

--- a/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -48,12 +48,14 @@
     <Compile Include="ICharacterAttributeRow.cs" />
     <Compile Include="ICharacter.cs" />
     <Compile Include="ICharacterDetailsDto.cs" />
+    <Compile Include="IFilterResourceQuery.cs" />
     <Compile Include="IHaveAnOwner.cs" />
     <Compile Include="IHaveAnOwnerId.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="IMove.cs" />
     <Compile Include="IMoveFilterResourceQuery.cs" />
     <Compile Include="IMovement.cs" />
+    <Compile Include="IMovementFilterResourceQuery.cs" />
     <Compile Include="IUniqueData.cs" />
     <Compile Include="IUniqueDataProvider.cs" />
     <Compile Include="MoveType.cs" />
