--- a/FrannHammer.WebApi.Tests/packages.config
+++ b/FrannHammer.WebApi.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.50.2" targetFramework="net45" />
   <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net45" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
