--- a/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -67,6 +67,10 @@
       <HintPath>..\packages\Autofac.WebApi2.Owin.4.0.0\lib\net45\Autofac.Integration.WebApi.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.0.7\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -198,9 +202,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionFilterAttributes\SingleCharacterResourceHalSupportAttribute.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -240,6 +244,13 @@
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\MoveController.cs" />
     <Compile Include="Controllers\MovementController.cs" />
+    <Compile Include="HypermediaServices\EntityToBusinessTranslationService.cs" />
+    <Compile Include="HypermediaServices\IEntityToBusinessTranslationService.cs" />
+    <Compile Include="HypermediaServices\ILinkProvider.cs" />
+    <Compile Include="Models\CharacterResource.cs" />
+    <Compile Include="Models\Link.cs" />
+    <Compile Include="Models\MovesLink.cs" />
+    <Compile Include="Models\Resource.cs" />
     <Compile Include="MongoDbBsonMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -327,6 +338,10 @@
     <ProjectReference Include="..\FrannHammer.Api.Services.Contracts\FrannHammer.Api.Services.Contracts.csproj">
       <Project>{62281D52-5B55-4976-B148-677B0BE6A18B}</Project>
       <Name>FrannHammer.Api.Services.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FrannHammer.Api\FrannHammer.Api.csproj">
+      <Project>{470ADA5B-56B2-45D3-8162-AB65B0350C68}</Project>
+      <Name>FrannHammer.Api</Name>
     </ProjectReference>
     <ProjectReference Include="..\FrannHammer.DefaultContainer.Configuration\FrannHammer.DefaultContainer.Configuration.csproj">
       <Project>{D0A0B3FE-CFB3-4759-AD3C-D3FC20FAE191}</Project>
