--- a/FrannHammer.WebApi/packages.config
+++ b/FrannHammer.WebApi/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net45" />
