- Replaced my approach to hypermedia links in character resource responses via Web Api Action Filters with a MessageHandler approach (via Ben Foster - http://benfoster.io/blog/generating-hypermedia-links-in-aspnet-web-api with a few changes)
- This is because using action filters causes too much code since ActionFilters are applied as attributes and I can't use generics with Attributes.  Delegating Handler approach fully supports the use of generics.

--- a/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -245,13 +245,21 @@
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\MoveController.cs" />
     <Compile Include="Controllers\MovementController.cs" />
+    <Compile Include="EnrichingHandler.cs" />
+    <Compile Include="HypermediaServices\CharacterResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\ManyMoveResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\ObjectContentResponseEnricher.cs" />
+    <Compile Include="ResponseEnricherConfigurationExtensions.cs" />
     <Compile Include="HypermediaServices\EntityToBusinessTranslationService.cs" />
     <Compile Include="HypermediaServices\IEntityToBusinessTranslationService.cs" />
     <Compile Include="HypermediaServices\ILinkProvider.cs" />
+    <Compile Include="HypermediaServices\IResponseEnricher.cs" />
     <Compile Include="Models\CharacterAttributesLink.cs" />
+    <Compile Include="Models\CharacterLink.cs" />
     <Compile Include="Models\CharacterResource.cs" />
     <Compile Include="Models\Link.cs" />
     <Compile Include="Models\MovementsLink.cs" />
+    <Compile Include="Models\MoveResource.cs" />
     <Compile Include="Models\MovesLink.cs" />
     <Compile Include="Models\Resource.cs" />
     <Compile Include="MongoDbBsonMapper.cs" />
