- CharacterAttributeRows, Moves and Movements responses are now supported with relative hyperlinks via custom message handlers - Refactored Steps assertions to include checks for correct hyperlinks in response objects

--- a/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -244,11 +244,17 @@
     <Compile Include="Controllers\MoveController.cs" />
     <Compile Include="Controllers\MovementController.cs" />
     <Compile Include="EnrichingHandler.cs" />
+    <Compile Include="HypermediaServices\CharacterAttributeRowResourceEnricher.cs" />
     <Compile Include="HypermediaServices\CharacterResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\ManyCharacterAttributeRowResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ManyCharacterResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\ManyMovementResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ManyMoveResourceEnricher.cs" />
+    <Compile Include="HypermediaServices\MovementResourceEnricher.cs" />
     <Compile Include="HypermediaServices\MoveResourceEnricher.cs" />
     <Compile Include="HypermediaServices\ObjectContentResponseEnricher.cs" />
+    <Compile Include="Models\CharacterAttributeRowResource.cs" />
+    <Compile Include="Models\MovementResource.cs" />
     <Compile Include="ResponseEnricherConfigurationExtensions.cs" />
     <Compile Include="HypermediaServices\EntityToBusinessTranslationService.cs" />
     <Compile Include="HypermediaServices\IEntityToBusinessTranslationService.cs" />
