--- a/FrannHammer.WebApi/Web.config
+++ b/FrannHammer.WebApi/Web.config
@@ -4,11 +4,16 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/" />
+  </connectionStrings>
+  <appSettings file="..\appsettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="throttlingrequestspersecond" value="100" />
+    <add key="databaseName" value="integrationtestfranndotexe" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
