--- a/FrannHammer.WebApi/packages.config
+++ b/FrannHammer.WebApi/packages.config
@@ -30,6 +30,7 @@
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.3" targetFramework="net45" />
