--- a/FrannHammer.WebApi/ConnectionStrings.config
+++ b/FrannHammer.WebApi/ConnectionStrings.config
@@ -1,4 +1,3 @@
-<?xml version="1.0"?>
-<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=BRIGHTSIDE\SQLEXPRESS;Initial Catalog=SM4SH;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
-</connectionStrings>
+ <connectionStrings>
+    <add name="DefaultConnection" connectionString="ds115411.mlab.com:15411/" />
+  </connectionStrings>
