--- a/FrannHammer.Seeding.Tests/app.config
+++ b/FrannHammer.Seeding.Tests/app.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings file="..\..\..\appsettings.config">
+  <appSettings>
+    <add key="username" value="testuser"/>
+    <add key="password" value="password"/>
     <add key="databaseName" value="playgroundfranndotexe"/>
   </appSettings>
   <connectionStrings>
