- Adjusted swagger api version string so swagger would stop whining.

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ ConnectionStringsTest.config
 /FakeKhSite/kuroganehammer.com/RivalsofAether
 /FakeKhSite
 /TestResults
+/FrannHammer.WebApi/appsettings.config.enc
