--- a/FrannHammer.WebApi/Web.config
+++ b/FrannHammer.WebApi/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
     <connectionStrings configSource="ConnectionStrings.config" />
-  <appSettings file="..\appsettings.config">
+  <appSettings file="appsettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
