--- a/FrannHammer.WebApi/packages.config
+++ b/FrannHammer.WebApi/packages.config
@@ -37,6 +37,8 @@
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="Swashbuckle" version="5.5.3" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
