- Now throwing a ResourceNotFoundException when a single resource is not found.  Bubbling this up to API via Exception Filters and returning as a 404 (globally) - Added Self links onto resource response objects for API requests - Thought about deleting this rewrite again. - Adjusted string-based equality comparers in GetAllWhere lambdas for API services to be case-insensitive (oops) - Fixed a bug where thumbnail urls were improperly scraped for characters with a space in their name. - Ready for public alpha?

--- a/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
+++ b/FrannHammer.Domain.Contracts/FrannHammer.Domain.Contracts.csproj
@@ -60,6 +60,7 @@
     <Compile Include="IUniqueDataProvider.cs" />
     <Compile Include="MoveType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceNotFoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
